# nevail

./: .gitignore-ts  .gitmodules  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml  test-build.yml
application/: config.json
src/: mozconfig.flatpak
src/branding-template/: branding.nsi  configure.sh
src/branding-template/locales/en-US/: brand.dtd  brand.ftl  brand.properties
src/branding-template/pref/: firefox-branding.js
src/distribution/: policies-flatpak.json  policies-linux-appimage.json  policies-linux.json  policies-windows.json
src/launch-app/: CMakeLists.txt  README.md
src/launch-app/src/: placeholders.hpp
src/open-in-default-browser/: README.md
src/open-in-default-browser/open-in-default-browser-ext/extension/: replaceLinks.js
src/patches/: desktop_file_generator.patch  linux_browser_css.patch  mozilla_dirsFromLibreWolf.patch  osx_browser_css.patch  windows_browser_css.patch
src_typescript/: build.ts  configurator.ts  i18n.ts  index.ts  pwa_configurator.ts  utils.ts
